# Nex

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
appstack/drivers/: CMakeLists.txt
appstack/drivers/include/drivers/: mpu9250.h
appstack/drivers/src/: mpu9250.c
appstack/libcom/: CMakeLists.txt  libcomdefs.cmake
appstack/libcom/include/libcom/: bytebuf.h  format.h  semver.h  types.h  unit.h  util.h
appstack/libcom/include/libcom/data/: queue.h  ring_buffer.h
appstack/libcom/include/libcom/sys/: devmode.h  runtime.h
appstack/libcom/src/: CMakeLists.txt  bytebuf.c  format.c  semver.c  unit.c  util.c
appstack/libcom/src/data/: queue.c  ring_buffer.c
appstack/libcom/src/sys/: devmode.c  runtime.c
appstack/libtest/: CMakeLists.txt  libtestdefs.cmake
appstack/libtest/include/libtest/: assertions.hpp  libtest.h  libtest.hpp
appstack/libtest/src/: libtest.c  libtest.cpp
appstack/synapse/: CMakeLists.txt  syndefs.cmake
appstack/synapse/cmake/: sources.cmake  syn.cmake  syndefs.cmake  synfn.cmake
appstack/synapse/cmake/cpu/: cm3.cmake  cm4f.cmake
appstack/synapse/cmake/defines/: functions.cmake  util.cmake
appstack/synapse/cmake/mcu/: stm32f100.cmake  stm32f101.cmake  stm32f102.cmake  stm32f103.cmake  stm32f105.cmake  stm32f401.cmake  stm32f405.cmake  stm32f407.cmake  stm32f410.cmake  stm32f411.cmake  stm32f412.cmake  stm32f413.cmake  stm32f415.cmake  stm32f417.cmake  stm32f423.cmake  stm32f439.cmake  stm32f446.cmake  stm32f479.cmake
appstack/synapse/cmake/post/: examples.cmake
appstack/synapse/examples/: CMakeLists.txt
appstack/synapse/examples/cm4/: CMakeLists.txt
appstack/synapse/examples/stm32/: CMakeLists.txt
appstack/synapse/examples/stm32/8bit_music_v1/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/adc_v1/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/blink_v1/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/blink_v2/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/dma_m2m_v1/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/dma_m2m_v2/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/dshot/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/exti_trigger_v1/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/iwdg_v1/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/iwdg_v2/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/mpu6500_9250_v1/: CMakeLists.txt
appstack/synapse/examples/stm32/mpu9250_i2c_v1/: main.c
appstack/synapse/examples/stm32/mpu9250_spi_driver_v1/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/mpu9250_spi_v1/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/profiler_v1/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/pwm_led_v2/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/pwm_servo_v1/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/rtc_v1/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/rtc_v2/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/runtime_v1/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/runtime_v2/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/scheduler/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/usart_v1/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/usart_v2/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/wwdg_v1/: CMakeLists.txt  main.c
appstack/synapse/examples/stm32/wwdg_v2/: CMakeLists.txt  main.c
appstack/synapse/firmware/arch/cortex/: CMakeLists.txt
appstack/synapse/firmware/common/: CMakeLists.txt
appstack/synapse/firmware/drivers/: CMakeLists.txt  mpu9250.c
appstack/synapse/firmware/io/: CMakeLists.txt  io_spi.c
appstack/synapse/include/synapse/: specs.h
appstack/synapse/include/synapse/drivers/: mpu9250.h
appstack/synapse/include/synapse/io/: io_spi.h  ioif.h
appstack/synapse/ld/stm32/fx/: stm32fx.ld
appstack/synapse/src/common/: CMakeLists.txt
appstack/synapse/src/cpu/cortex/: CMakeLists.txt  instrinsic.c
appstack/synapse/src/drivers/: CMakeLists.txt  mpu9250.c
appstack/synapse/src/io/: CMakeLists.txt  io_spi.c  ioif.c
appstack/synapse/tests/arch/scb/: scb_v1_test.c
appstack/synapse/tests/arch/systick/: systick_v1_test.c
appstack/synapse/tests/cpu/scb/: scb_v1_test.c
appstack/synapse/tests/cpu/systick/: systick_v1_test.c
appstack/synapse/tests/mcu/adc/: adc_v1_test.c
appstack/synapse/tests/mcu/can/: can_v1_test.c
appstack/synapse/tests/mcu/crc/: crc_v1_test.c
appstack/synapse/tests/mcu/dac/: dac_v1_test.c
appstack/synapse/tests/mcu/dcmi/: dcmi_v1_test.c
appstack/synapse/tests/mcu/dma/: dma_v1_test.c  dma_v2_test.c
appstack/synapse/tests/mcu/exti/: exti_v1_test.c
appstack/synapse/tests/mcu/flash/: flash_v1_test.c
appstack/synapse/tests/mcu/gpio/: gpio_v1_test.c
appstack/synapse/tests/mcu/iwdg/: iwdg_v1_test.c
appstack/synapse/tests/mcu/ltdc/: ltdc_v1_test.c
appstack/synapse/tests/mcu/sai/: sai_v1_test.c
appstack/synapse/tests/mcu/sdio/: sdio_v1_test.c
appstack/synapse/tests/mcu/spi/: spi_v1_test.c
appstack/synapse/tests/mcu/syscfg/: syscfg_v1_test.c
appstack/synapse/tests/mcu/wwdg/: wwdg_v1_test.c
appstack/synapse/tests/periph/adc/: adc_v1_test.c
appstack/synapse/tests/periph/afio/: afio_v1_test.c
appstack/synapse/tests/periph/bkp/: bkp_v1_test.c
appstack/synapse/tests/periph/cryp/: cryp_v1_test.c
appstack/synapse/tests/periph/dac/: dac_v2_test.c
appstack/synapse/tests/periph/dma/: dma_v2_test.c
appstack/synapse/tests/periph/dma2d/: dma2d_v1_test.c
appstack/synapse/tests/periph/flash/: flash_v1_test.c  flash_v2_test.c
appstack/synapse/tests/periph/fmpi2c/: fmpi2c_v1_test.c
appstack/synapse/tests/periph/hash/: hash_v1_test.c
appstack/synapse/tests/periph/i2c/: i2c_v1_test.c
appstack/synapse/tests/periph/pwr/: pwr_v1_test.c  pwr_v2_test.c
appstack/system/: CMakeLists.txt  sysdefs.cmake
appstack/system/src/: CMakeLists.txt
appstack/system/src/profiler/: profiler.c
appstack/system/src/scheduler/: scheduler.c  task_history.c
appstack/system/src/time/: time.c
(+1053 files in other folders)
